# python_study_skypro

./: .coverage  .env_example  .gitignore  README.md  config.py  main.py  pyproject.toml  pytest.ini
data/: operations_main.csv  operations_main.json  operations_main.xlsx
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_search_py.html  z_145eef247bfb46b6_statistics_py.html  z_145eef247bfb46b6_table_data_readers_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_6156a86a215061be___init___py.html  z_6156a86a215061be_input_data_formater_py.html  z_a4a31f3b0e8d6aeb___init___py.html  z_a4a31f3b0e8d6aeb_generators_validators_py.html  z_a4a31f3b0e8d6aeb_processing_validator_py.html  z_bef636d57f78fa40___init___py.html  z_bef636d57f78fa40_input_data_formater_py.html  z_e134cf39aed5117d___init___py.html  z_e134cf39aed5117d_base_validator_py.html  z_e134cf39aed5117d_external_api_py.html  z_e134cf39aed5117d_generators_validators_py.html  z_e134cf39aed5117d_get_info_validators_py.html  z_e134cf39aed5117d_processing_validator_py.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  search.py  statistics.py  table_data_readers.py  utils.py  widget.py
tests/: test_csv_reader.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  (+6 more)
(+38 files in other folders)
