[project]
name = "skypro-first-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Uriy-T",email = "briner_asterios@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.34.2"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"



[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^26.5.1"
mypy = "^2.1.0"
isort = "^8.0.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
line_length = 79